# pokemon-cli

./: pyproject.toml  readme.md
src/pokemon_cli/: cli.py
